tests/cases/errors/sema/deref_non_pointer.hc
//@ error: cannot dereference a non-pointer
U0 Main()
{
  I64 x = 5;
  *x;
}
